--- a/Retail_Electronics_Application/src/main/resources/application.properties
+++ b/Retail_Electronics_Application/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#### Spring JPA config ####
+spring.application.name=Retail-Electronics-Application
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/retailElectronicsdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -7,3 +9,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #server.port=8081
+
+
+#### Spring SMTP config ####
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=veereshta@gmail.com
+spring.mail.password=${electronics.app.pwd}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
