login api implemented using jwt tokenization

--- a/Retail_Electronics_Application/src/main/resources/application.properties
+++ b/Retail_Electronics_Application/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.mail.password=${electronics.app.pwd}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+### Application Config ####
+myapp.jwt.secret=${jwt.secret}
+myapp.jwt.access.expiration=3600000
+#15 days for refresh expiration
+myapp.jwt.refresh.expiration=1296000000
