--- a/Retail_Electronics_Application/src/main/resources/application.properties
+++ b/Retail_Electronics_Application/src/main/resources/application.properties
@@ -9,7 +9,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #server.port=8081
-
+## Mongo db config ##
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=retailElectronicsdb
 
 #### Spring SMTP config ####
 spring.mail.host=smtp.gmail.com
