--- a/Retail_Electronics_Application/src/main/resources/application.properties
+++ b/Retail_Electronics_Application/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 #### Spring JPA config ####
 spring.application.name=Retail-Electronics-Application
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/retailElectronicsdb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://localhost:3306/retailElectronicsdb?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 #server.port=8081
 ## Mongo db config ##
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=retailElectronicsdb
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=retailElectronicsdb
 
 #### Spring SMTP config ####
 spring.mail.host=smtp.gmail.com
